Adds ontologies directory

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 afs/media/packages
 afs/logs/*.log
 afs/uploadedfiles
-afs/ontologies
+afs/ontologies/*.xml
 arches.log
 *.sublime*
 afs/settings_local.py
