Adds three.js re #6

--- a/afs/package.json
+++ b/afs/package.json
@@ -14,6 +14,7 @@
         "blueimp-gallery": "2.15.2",
         "bootstrap": "3.3.7",
         "bootstrap-colorpicker": "^2.3.6",
+        "c3": "^0.7.12",
         "chosen-js": "1.8.2",
         "ckeditor": "^4.6.2",
         "codemirror": "^5.24.0",
@@ -57,7 +58,11 @@
         "requirejs-plugins": "1.0.2",
         "requirejs-text": "2.0.12",
         "select2": "3.5.1",
+        "three": "^0.113.2",
         "underscore": "1.9.1",
         "uuidjs": "^3.3.0"
+    },
+    "resolutions": {
+        "c3/d3": "^5.8.0"
     }
 }
