--- a/afs/package.json
+++ b/afs/package.json
@@ -10,6 +10,7 @@
         "@mapbox/mapbox-gl-draw": "1.1.2",
         "@mapbox/mapbox-gl-geocoder": "^4.4.0",
         "@turf/turf": "4.4.0",
+        "@tweenjs/tween.js": "^17",
         "backbone": "1.3.3",
         "blueimp-gallery": "2.15.2",
         "bootstrap": "3.3.7",
