--- a/afs/package.json
+++ b/afs/package.json
@@ -54,6 +54,7 @@
         "moment": ">=2.10.5",
         "nouislider": "11.0.3",
         "numeral": "^2.0.6",
+        "plotly.js-dist": "^1.52.2",
         "proj4": "^2.3.15",
         "requirejs": "~2.3.2",
         "requirejs-plugins": "1.0.2",
