Hides the icon in the nav bar for the project workflow.

--- a/afs/plugins/project-workflow.json
+++ b/afs/plugins/project-workflow.json
@@ -4,7 +4,7 @@
     "icon": "fa fa-file",
     "component": "views/components/plugins/project-workflow",
     "componentname": "project-workflow",
-    "config": {"show":true},
+    "config": {"show":false},
     "slug": "project-workflow",
     "sortorder": 0
 }
