Adds CRM PC extension

--- a/afs/pkg/ontologies/linkedart/ontology_config.json
+++ b/afs/pkg/ontologies/linkedart/ontology_config.json
@@ -3,7 +3,8 @@
   "base_name": "Linked Art",
   "extensions": [
     "linkedart.xml",
-    "linkedart_crm_enhancements.xml"
+    "linkedart_crm_enhancements.xml",
+    "crm_pc_extension.xml"
   ],
   "base_version": "6.2.6",
   "base_id": "0b1f5462-faa7-11e9-8f09-3af9d3b32b71"
