--- a/afs/pkg/ontologies/linkedart/ontology_config.json
+++ b/afs/pkg/ontologies/linkedart/ontology_config.json
@@ -4,7 +4,8 @@
   "extensions": [
     "linkedart.xml",
     "linkedart_crm_enhancements.xml",
-    "crm_pc_extension.xml"
+    "crm_pc_extension.xml",
+    "CRMdig_v3.2.1.xml"
   ],
   "base_version": "6.2.6",
   "base_id": "0b1f5462-faa7-11e9-8f09-3af9d3b32b71"
