--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,28 @@ services:
       stdin_open: true
       tty: true
 
+    afs_livereload:
+      profiles:
+        - livereload
+      container_name: afs_livereload
+      image: fargeo/afs
+      build:
+        context: ..
+        dockerfile: afs/Dockerfile
+      command: run_livereload
+      volumes:
+        - ../arches/:/web_root/arches
+        - ./:/web_root/afs
+        - cantaloupe-data:/web_root/afs/afs/uploadedfiles
+      env_file:
+        - ./docker/env_file.env
+      ports:
+        - 35729:35729      
+      depends_on:
+          - afs
+      stdin_open: true
+      tty: true
+
     db_afs:
       container_name: db_afs
       image: kartoza/postgis:12.0
