Fix for dockerized celery not starting.

--- a/docker/conf.d/afs-celeryd.conf
+++ b/docker/conf.d/afs-celeryd.conf
@@ -3,7 +3,7 @@
 ; ==================================
 
 [program:celery]
-    command=/usr/local/bin/celery worker -A ssc.celery --loglevel=INFO
+    command=/usr/local/bin/celery -A afs worker --loglevel=info
     directory=/web_root/afs
 
     user=root
