Add new docker-compose and env_files to work with shared arches containers

--- a/docker/env_file.env
+++ b/docker/env_file.env
@@ -5,13 +5,13 @@ INSTALL_DEFAULT_CONCEPTS=False
 PGUSERNAME=postgres
 PGPASSWORD=postgres
 PGDBNAME=afs
-PGHOST=db_afs
+PGHOST=arches_db
 PGPORT=5432
-COUCHDB_HOST=couchdb_afs
+COUCHDB_HOST=arches_couchdb
 COUCHDB_PORT=5984
 COUCHDB_USER=admin
 COUCHDB_PASS=password
-ESHOST=elasticsearch_afs
+ESHOST=arches_elasticsearch
 ESPORT=9200
 DJANGO_MODE=DEV
 DJANGO_DEBUG=True
@@ -20,17 +20,6 @@ DOMAIN_NAMES=localhost
 PYTHONUNBUFFERED=0
 TZ=PST
 ELASTICSEARCH_PREFIX=afs
-
-#postgres
-POSTGRES_USER=postgres
-POSTGRES_PASS=postgres
-POSTGRES_DB=postgres
-POSTGRES_MULTIPLE_EXTENSIONS=postgis,postgis_topology
-TZ=PST
-
-#couchdb
-COUCHDB_USER=admin
-COUCHDB_PASSWORD=password
 
 #elasticsearch
 TZ=PST
