--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       container_name: db_afs
       image: kartoza/postgis:13.0
       volumes:
-          - postgres-data:/var/lib/postgresql/data
+          - postgres-data:/var/lib/postgresql
           - postgres-log:/var/log/postgresql
           - ../arches/arches/install/init-unix.sql:/docker-entrypoint-initdb.d/init.sql # to set up the DB template
       ports:
