Fix postgres password

--- a/docker/env_file.env
+++ b/docker/env_file.env
@@ -3,7 +3,7 @@ ARCHES_PROJECT=afs
 INSTALL_DEFAULT_GRAPHS=False
 INSTALL_DEFAULT_CONCEPTS=False
 PGUSERNAME=postgres
-PGPASSWORD=postgres
+PGPASSWORD=postgis
 PGDBNAME=afs
 PGHOST=arches_db
 PGPORT=5432
