--- a/afs/pkg/graphs/resource_models/Project.json
+++ b/afs/pkg/graphs/resource_models/Project.json
@@ -504,7 +504,7 @@
                             "uniquetoallinstances": false
                         }
                     ],
-                    "cssclass": "afs-workflow-second-component",
+                    "cssclass": null,
                     "description": "# Specific:\n\n\n# General:\n\n\n# Arches Note:\n\n\n* BranchId: \n* FieldId: \n",
                     "graph_id": "0b9235d9-ca85-11e9-9fa2-a4d18cec433a",
                     "helpenabled": false,
