--- a/afs/package.json
+++ b/afs/package.json
@@ -5,6 +5,9 @@
         "type": "git"
     },
     "dependencies": {
+        "@uppy/aws-s3-multipart": "^2.4.1",
+        "@uppy/core": "^2.3.1",
+        "@uppy/progress-bar": "^2.1.1",
         "arches": "archesproject/arches#master",
         "plotly.js-dist": "^1.52.2",
         "three": "^0.113.2"
