--- a/afs/package.json
+++ b/afs/package.json
@@ -5,7 +5,7 @@
         "type": "git"
     },
     "dependencies": {
-        "arches": "archesproject/arches#master",
+        "arches": "archesproject/arches#dev/6.2.x",
         "plotly.js-dist": "^1.52.2",
         "three": "^0.113.2"
     }
