--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+name: afs7-0
 services:
     afs:
       container_name: afs7-0
@@ -14,7 +15,7 @@ services:
       env_file:
         - ./docker/env_file.env
       ports:
-        - 8888:8000
+        - 8005:8000
       stdin_open: true
       tty: true
 
