move s3 functionality into s3 specific card

--- a/afs/package.json
+++ b/afs/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@uppy/aws-s3-multipart": "^2.4.1",
         "@uppy/core": "^2.3.1",
+        "@uppy/dashboard": "^2.4.0",
         "@uppy/progress-bar": "^2.1.1",
         "arches": "archesproject/arches#dev/6.2.x",
         "plotly.js-dist": "^1.52.2",
