Initial changes to migrate afs to 7.2.1

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.pyc
-afs/media/packages
+afs/media/node_modules
 afs/logs/*.log
 afs/uploadedfiles
 afs/cantaloupe/*
@@ -15,3 +15,6 @@ Procfile
 afs/settings_docker.py
 CACHE
 afs/export_deliverables/
+afs/staticfiles
+afs/webpack/webpack-stats.json
+node_modules
