--- a/docker/webpack/env_file.env
+++ b/docker/webpack/env_file.env
@@ -1,5 +1,8 @@
-#arches
+
+NODE_OPTIONS=--max-old-space-size=10000
 ARCHES_PROJECT=afs
+
+#arches
 INSTALL_DEFAULT_GRAPHS=False
 INSTALL_DEFAULT_CONCEPTS=False
 PGUSERNAME=postgres
@@ -20,11 +23,3 @@ ELASTICSEARCH_PREFIX=$ARCHES_PROJECT
 #rabbitmq
 RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
-
-#cantaloupe
-CANTALOUPE_ENDPOINT_ADMIN_ENABLED = true
-CANTALOUPE_ENDPOINT_ADMIN_USERNAME = admin
-CANTALOUPE_ENDPOINT_ADMIN_SECRET = admin
-CANTALOUPE_HOST = cantaloupe_afs
-CANTALOUPE_PORT = 8182
-CANTALOUPE_FILESYSTEMSOURCE_BASICLOOKUPSTRATEGY_PATH_PREFIX = /imageroot/
