--- a/afs/system_settings/System_Settings.json
+++ b/afs/system_settings/System_Settings.json
@@ -2,9 +2,13 @@
     "business_data": {
         "resources": [{
             "resourceinstance": {
+                "descriptors": null,
                 "graph_id": "ff623370-fa12-11e6-b98b-6c4008b05c4c",
+                "graph_publication_id": "f02249a0-95b5-11ed-a5e5-a683e74f6c3a",
                 "legacyid": "a106c400-260c-11e7-a604-14109fd34195",
-                "resourceinstanceid": "a106c400-260c-11e7-a604-14109fd34195"
+                "name": null,
+                "resourceinstanceid": "a106c400-260c-11e7-a604-14109fd34195",
+                "publication_id": "f02249a0-95b5-11ed-a5e5-a683e74f6c3a"
             },
             "tiles": [{
                 "data": {},
@@ -16,6 +20,38 @@
                 "tileid": "3442b7e7-9bee-4c54-8d37-eca3a236ef8f"
             }, {
                 "data": {
+                    "0e8fdef0-4148-11e7-8330-c4b301baab9f": null,
+                    "0e8ffbcf-4148-11e7-a95a-c4b301baab9f": {
+                        "features": [{
+                            "geometry": {
+                                "coordinates": [
+                                    [
+                                        [-118.4803787736883, 34.081182467333576],
+                                        [-118.4689381387886, 34.08108261667783],
+                                        [-118.46884848869117, 34.0728338349286],
+                                        [-118.48025364572112, 34.0729931588031],
+                                        [-118.4803787736883, 34.081182467333576]
+                                    ]
+                                ],
+                                "type": "Polygon"
+                            },
+                            "id": "5875ab8c144150c5a74dd8891f2a9330",
+                            "properties": {
+                                "nodeId": "0e8ffbcf-4148-11e7-a95a-c4b301baab9f"
+                            },
+                            "type": "Feature"
+                        }],
+                        "type": "FeatureCollection"
+                    }
+                },
+                "nodegroup_id": "0e8fdef0-4148-11e7-8330-c4b301baab9f",
+                "parenttile_id": "3442b7e7-9bee-4c54-8d37-eca3a236ef8f",
+                "provisionaledits": null,
+                "resourceinstance_id": "a106c400-260c-11e7-a604-14109fd34195",
+                "sortorder": 0,
+                "tileid": "0621c870-5802-4cf0-8964-1934bd7f98bd"
+            }, {
+                "data": {
                     "0e8ffaf5-4148-11e7-b24d-c4b301baab9f": 4,
                     "0e8ffcab-4148-11e7-a571-c4b301baab9f": 100
                 },
@@ -25,6 +61,33 @@
                 "resourceinstance_id": "a106c400-260c-11e7-a604-14109fd34195",
                 "sortorder": 0,
                 "tileid": "02dd0153-faa4-4016-9207-903cc87a9b73"
+            }, {
+                "data": {
+                    "0e9000b0-4148-11e7-bd19-c4b301baab9f": {
+                        "en": {
+                            "direction": "ltr",
+                            "value": "pk.eyJ1IjoiY2hpYXR0IiwiYSI6ImZRLTZDbVkifQ.2ZLLC1kInvxJ7isk_0_OMw"
+                        }
+                    },
+                    "0e900254-4148-11e7-9902-c4b301baab9f": {
+                        "en": {
+                            "direction": "ltr",
+                            "value": "mapbox://sprites/mapbox/basic-v9"
+                        }
+                    },
+                    "0e90031e-4148-11e7-a176-c4b301baab9f": {
+                        "en": {
+                            "direction": "ltr",
+                            "value": "mapbox://fonts/mapbox/{fontstack}/{range}.pbf"
+                        }
+                    }
+                },
+                "nodegroup_id": "0e8fe457-4148-11e7-9c10-c4b301baab9f",
+                "parenttile_id": "3442b7e7-9bee-4c54-8d37-eca3a236ef8f",
+                "provisionaledits": null,
+                "resourceinstance_id": "a106c400-260c-11e7-a604-14109fd34195",
+                "sortorder": 0,
+                "tileid": "f49e37b3-3686-4fbd-98c9-ab8241f72a60"
             }, {
                 "data": {
                     "0e8ff9d1-4148-11e7-90ed-c4b301baab9f": 16.0,
@@ -61,8 +124,18 @@
             }, {
                 "data": {
                     "c5a2b1dc-fadd-11e6-a726-6c4008b05c4c": null,
-                    "c5a2b94a-fadd-11e6-a029-6c4008b05c4c": "Arches for Science",
-                    "c5a2bdb3-fadd-11e6-8c96-6c4008b05c4c": "AFS"
+                    "c5a2b94a-fadd-11e6-a029-6c4008b05c4c": {
+                        "en": {
+                            "direction": "ltr",
+                            "value": "Arches for Science"
+                        }
+                    },
+                    "c5a2bdb3-fadd-11e6-8c96-6c4008b05c4c": {
+                        "en": {
+                            "direction": "ltr",
+                            "value": "AFS"
+                        }
+                    }
                 },
                 "nodegroup_id": "c5a2b1dc-fadd-11e6-a726-6c4008b05c4c",
                 "parenttile_id": "a70b6016-5145-4513-a6be-5901944347b4",
@@ -73,7 +146,12 @@
             }, {
                 "data": {
                     "c5a2b530-fadd-11e6-b5f6-6c4008b05c4c": null,
-                    "c5a2ba63-fadd-11e6-9306-6c4008b05c4c": "arches.app.utils.data_management.sparql_providers.aat_provider.AAT_Provider"
+                    "c5a2ba63-fadd-11e6-9306-6c4008b05c4c": {
+                        "en": {
+                            "direction": "ltr",
+                            "value": "arches.app.utils.data_management.sparql_providers.aat_provider.AAT_Provider"
+                        }
+                    }
                 },
                 "nodegroup_id": "c5a2b530-fadd-11e6-b5f6-6c4008b05c4c",
                 "parenttile_id": "a70b6016-5145-4513-a6be-5901944347b4",
@@ -81,50 +159,6 @@
                 "resourceinstance_id": "a106c400-260c-11e7-a604-14109fd34195",
                 "sortorder": 0,
                 "tileid": "c45a7069-1803-4d85-a017-61296a2ae760"
-            }, {
-                "data": {
-                    "0e9000b0-4148-11e7-bd19-c4b301baab9f": "pk.eyJ1IjoiY2hpYXR0IiwiYSI6ImZRLTZDbVkifQ.2ZLLC1kInvxJ7isk_0_OMw",
-                    "0e900254-4148-11e7-9902-c4b301baab9f": "mapbox://sprites/mapbox/basic-v9",
-                    "0e90031e-4148-11e7-a176-c4b301baab9f": "mapbox://fonts/mapbox/{fontstack}/{range}.pbf"
-                },
-                "nodegroup_id": "0e8fe457-4148-11e7-9c10-c4b301baab9f",
-                "parenttile_id": "3442b7e7-9bee-4c54-8d37-eca3a236ef8f",
-                "provisionaledits": null,
-                "resourceinstance_id": "a106c400-260c-11e7-a604-14109fd34195",
-                "sortorder": 0,
-                "tileid": "f49e37b3-3686-4fbd-98c9-ab8241f72a60"
-            }, {
-                "data": {
-                    "0e8fdef0-4148-11e7-8330-c4b301baab9f": null,
-                    "0e8ffbcf-4148-11e7-a95a-c4b301baab9f": {
-                        "features": [{
-                            "geometry": {
-                                "coordinates": [
-                                    [
-                                        [-118.4803787736883, 34.081182467333576],
-                                        [-118.4689381387886, 34.08108261667783],
-                                        [-118.46884848869117, 34.0728338349286],
-                                        [-118.48025364572112, 34.0729931588031],
-                                        [-118.4803787736883, 34.081182467333576]
-                                    ]
-                                ],
-                                "type": "Polygon"
-                            },
-                            "id": "5875ab8c144150c5a74dd8891f2a9330",
-                            "properties": {
-                                "nodeId": "0e8ffbcf-4148-11e7-a95a-c4b301baab9f"
-                            },
-                            "type": "Feature"
-                        }],
-                        "type": "FeatureCollection"
-                    }
-                },
-                "nodegroup_id": "0e8fdef0-4148-11e7-8330-c4b301baab9f",
-                "parenttile_id": "3442b7e7-9bee-4c54-8d37-eca3a236ef8f",
-                "provisionaledits": null,
-                "resourceinstance_id": "a106c400-260c-11e7-a604-14109fd34195",
-                "sortorder": 0,
-                "tileid": "0621c870-5802-4cf0-8964-1934bd7f98bd"
             }]
         }]
     }
