upgrades, remove get-pip

--- a/docker/webpack/Dockerfile
+++ b/docker/webpack/Dockerfile
@@ -23,7 +23,7 @@ RUN set -ex \
   && apt-get install -y --no-install-recommends curl \
   && apt-get install -y --no-install-recommends $RUN_DEPS \
   && curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py \
-  && python3.8 get-pip.py 
+  && apt install python3-pip -y
 
 COPY ./arches ${ARCHES_ROOT}
 RUN apt-get update && apt-get -y install curl \
