--- a/afs/package.json
+++ b/afs/package.json
@@ -5,12 +5,12 @@
         "type": "git"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.2.1",
+        "arches": "archesproject/arches#dev/7.4.x",
         "plotly.js-dist": "^1.52.2",
         "three": "^0.148.0"
     },
     "devDependencies": {
-        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.2.1"
+        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.4.x"
     },
     "scripts": {
         "build_production": "NODE_PATH=./media/node_modules NODE_OPTIONS=--max_old_space_size=8192 NODE_ENV=production ./media/node_modules/.bin/webpack --config webpack/webpack.config.prod.js",
