--- a/afs/package.json
+++ b/afs/package.json
@@ -5,12 +5,12 @@
         "type": "git"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.2.1",
+        "arches": "archesproject/arches#dev/7.4.x",
         "plotly.js-dist": "^1.52.2",
         "three": "^0.148.0"
     },
     "devDependencies": {
-        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.2.1",
+        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.4.x",
         "cypress": "^12.3.0"
     },
     "scripts": {
