--- a/.github/workflows/add-new-issue-to-project.yml
+++ b/.github/workflows/add-new-issue-to-project.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           project: afs-v1.0-iterations
           column: New
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.CH_PROJECT_TOKEN }}
