chemical analysis workflow + uppy uploader

--- a/afs/package.json
+++ b/afs/package.json
@@ -9,6 +9,7 @@
         "@uppy/core": "^2.3.1",
         "@uppy/dashboard": "^2.4.0",
         "@uppy/progress-bar": "^2.1.1",
+        "@uppy/drag-drop": "^2.1.2",
         "arches": "archesproject/arches#dev/7.4.x",
         "plotly.js-dist": "^1.52.2",
         "three": "^0.148.0"
