--- a/afs/package.json
+++ b/afs/package.json
@@ -8,9 +8,11 @@
         "@uppy/aws-s3-multipart": "^2.4.1",
         "@uppy/core": "^2.3.1",
         "@uppy/dashboard": "^2.4.0",
-        "@uppy/progress-bar": "^2.1.1",
         "@uppy/drag-drop": "^2.1.2",
+        "@uppy/progress-bar": "^2.1.1",
         "arches": "archesproject/arches#dev/7.4.x",
+        "dom-to-image": "^2.6.0",
+        "html2canvas": "^1.4.1",
         "plotly.js-dist": "^1.52.2",
         "three": "^0.148.0"
     },
