--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       volumes:
         - ../arches/:/web_root/arches
         - ./:/web_root/afs
+        - ../arches_templating/arches_templating:/web_root/arches_templating
         - cantaloupe-data-afs7:/web_root/afs/afs/uploadedfiles
       env_file:
         - ./docker/env_file.env
