--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       volumes:
         - ../arches/:/web_root/arches
         - ./:/web_root/afs
-        - ../arches_templating/arches_templating:/web_root/arches_templating
+        - ../arches_templating/:/web_root/arches_templating
         - cantaloupe-data-afs7:/web_root/afs/afs/uploadedfiles
       env_file:
         - ./docker/env_file.env
       ports:
-        - 8001:8000
+        - 8001:80
         - 5678:5678
       stdin_open: true
       tty: true
