change port to 80

--- a/docker/env_file.env
+++ b/docker/env_file.env
@@ -12,6 +12,7 @@ ESPORT=9200
 DJANGO_MODE=DEV
 DJANGO_DEBUG=True
 DOMAIN_NAMES=*
+DJANGO_PORT=80
 #DJANGO_REMOTE_DEBUG=False
 PYTHONUNBUFFERED=0
 TZ=PST
