--- a/.github/workflows/add-new-issue-to-project.yml
+++ b/.github/workflows/add-new-issue-to-project.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/add-to-project@4756e6330fe1e0a736690d3cfd9f11c9399c2ed4
         with:
           project-url: https://github.com/orgs/archesproject/projects/1
-          github-token: ${{ secrets.CH_PROJECT_TOKEN }}
+          github-token: ${{ secrets.AFS_ADD_TO_PROJECT_TOKEN }}
