removes spaces for docker (non-compose) build process

--- a/docker/env_file.env
+++ b/docker/env_file.env
@@ -23,9 +23,9 @@ RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
 
 #cantaloupe
-CANTALOUPE_ENDPOINT_ADMIN_ENABLED = true
-CANTALOUPE_ENDPOINT_ADMIN_USERNAME = admin
-CANTALOUPE_ENDPOINT_ADMIN_SECRET = admin
-CANTALOUPE_HOST = cantaloupe_afs
-CANTALOUPE_PORT = 8182
-CANTALOUPE_FILESYSTEMSOURCE_BASICLOOKUPSTRATEGY_PATH_PREFIX = /imageroot/
+CANTALOUPE_ENDPOINT_ADMIN_ENABLED=true
+CANTALOUPE_ENDPOINT_ADMIN_USERNAME=admin
+CANTALOUPE_ENDPOINT_ADMIN_SECRET=admin
+CANTALOUPE_HOST=cantaloupe_afs
+CANTALOUPE_PORT=8182
+CANTALOUPE_FILESYSTEMSOURCE_BASICLOOKUPSTRATEGY_PATH_PREFIX=/imageroot/
