--- a/docker/conf.d/afs-celeryd.conf
+++ b/docker/conf.d/afs-celeryd.conf
@@ -3,7 +3,7 @@
 ; ==================================
 
 [program:celery]
-    command=/usr/local/bin/celery worker -A ssc.celery --loglevel=INFO
+    command=python3 -m celery -A afs.celery worker --loglevel=INFO
     directory=/web_root/afs
 
     user=root
