fix celerybeat for docker

--- a/docker/afs-supervisor.conf
+++ b/docker/afs-supervisor.conf
@@ -21,4 +21,4 @@
     serverurl=unix:///tmp/supervisor.sock ; use unix:// schem for a unix sockets.
 
 [include]
-    files=./conf.d/afs-celeryd.conf
+    files=./conf.d/afs-celeryd.conf ./conf.d/afs-celerybeat.conf
