--- a/docker/conf.d/afs-celerybeat.conf
+++ b/docker/conf.d/afs-celerybeat.conf
@@ -3,8 +3,8 @@
 ; ================================
 
 [program:celerybeat]
-	command=/usr/local/bin/celery beat -A ss.celery --schedule=/tmp/celerybeat-schedule --loglevel=INFO --pidfile=/tmp/celerybeat.pid
-	directory=/web_root/afs
+    command=python3 -m celery -A afs.celery beat --loglevel=INFO 
+    directory=/web_root/afs
 
     user=root
     numprocs=1
