hides project report workflow from navbar re #1194

--- a/afs/plugins/project-report-workflow.json
+++ b/afs/plugins/project-report-workflow.json
@@ -4,7 +4,7 @@
     "icon": "fa fa-paperclip",
     "component": "views/components/plugins/project-report-workflow",
     "componentname": "project-report-workflow",
-    "config": {},
+    "config": {"show": false},
     "slug": "project-report-workflow",
     "sortorder": 1
 }
