Move temp_file view to core, #9749

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ Procfile
 afs/settings_docker.py
 CACHE
 afs/export_deliverables/
+afs/archestemp/
 afs/staticfiles
 afs/webpack/webpack-stats.json
 node_modules
