--- a/afs/package.json
+++ b/afs/package.json
@@ -10,14 +10,14 @@
         "@uppy/dashboard": "^2.4.0",
         "@uppy/drag-drop": "^2.1.2",
         "@uppy/progress-bar": "^2.1.1",
-        "arches": "archesproject/arches#dev/7.4.x",
+        "arches": "archesproject/arches#9789-cbyrd-integrate-vue",
         "dom-to-image": "^2.6.0",
         "html2canvas": "^1.4.1",
         "plotly.js-dist": "^1.52.2",
         "three": "^0.148.0"
     },
     "devDependencies": {
-        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.4.x"
+        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.5.x"
     },
     "scripts": {
         "build_production": "NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 NODE_ENV=production ./media/node_modules/.bin/webpack --config webpack/webpack.config.prod.js",
