--- a/afs/package.json
+++ b/afs/package.json
@@ -19,6 +19,16 @@
     "devDependencies": {
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.5.x"
     },
+    "nodeModulesPaths": {
+        "plotly.js-dist": "node_modules/plotly.js-dist",
+        "Plotly": "node_modules/plotly.js-dist",
+        "three": "node_modules/three",
+        "CSS2DRenderer": "node_modules/three/examples/jsm/renderers/CSS2DRenderer",
+        "TrackballControls": "node_modules/three/examples/jsm/controls/TrackballControls",
+        "PDBLoader": "node_modules/three/examples/jsm/loaders/PDBLoader",
+        "PCDLoader": "node_modules/three/examples/jsm/loaders/PCDLoader",
+        "ColladaLoader": "node_modules/three/examples/jsm/loaders/ColladaLoader"
+    },
     "scripts": {
         "build_production": "NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 NODE_ENV=production ./media/node_modules/.bin/webpack --config webpack/webpack.config.prod.js",
         "build_development": "NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 ./media/node_modules/.bin/webpack --config webpack/webpack.config.dev.js",
