--- a/afs/package.json
+++ b/afs/package.json
@@ -24,5 +24,15 @@
         "build_development": "NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 ./media/node_modules/.bin/webpack --config webpack/webpack.config.dev.js",
         "build_test": "NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 ./media/node_modules/.bin/webpack --config webpack/webpack.config.dev.js --env test=true",
         "start": "NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 ./media/node_modules/.bin/webpack serve --config webpack/webpack.config.dev.js"
+    },
+    "nodeModulesPaths": {
+        "plotly.js-dist": "node_modules/plotly.js-dist",
+        "Plotly": "node_modules/plotly.js-dist",
+        "three": "node_modules/three",
+        "CSS2DRenderer": "node_modules/three/examples/jsm/renderers/CSS2DRenderer",
+        "TrackballControls": "node_modules/three/examples/jsm/controls/TrackballControls",
+        "PDBLoader": "node_modules/three/examples/jsm/loaders/PDBLoader",
+        "PCDLoader": "node_modules/three/examples/jsm/loaders/PCDLoader",
+        "ColladaLoader": "node_modules/three/examples/jsm/loaders/ColladaLoader"
     }
 }
