Standardize name in package.json
Eventually, this name should become something else

--- a/afs/package.json
+++ b/afs/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "arches",
+    "name": "afs",
     "repository": {
-        "url": "git@github.com:archesproject/arches.git",
+        "url": "git@github.com:archesproject/arches-for-science-prj.git",
         "type": "git"
     },
     "dependencies": {
