--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
 *.pyc
-afs/media/node_modules
-afs/media/build
-afs/logs/*.log
-afs/uploadedfiles
-afs/cantaloupe/*
-afs/ontologies/*.xml
+arches_for_science/media/node_modules
+arches_for_science/media/build
+arches_for_science/logs/*.log
+arches_for_science/uploadedfiles
+arches_for_science/cantaloupe/*
+arches_for_science/ontologies/*.xml
 arches.log
 *.sublime*
-afs/settings_local.py
+arches_for_science/settings_local.py
 .DS_Store
 *.djcache
-afs/node_modules
+arches_for_science/node_modules
 .vscode/
 Procfile
-afs/settings_docker.py
+arches_for_science/settings_docker.py
 CACHE
-afs/export_deliverables/
-afs/archestemp/
-afs/staticfiles
-afs/webpack/webpack-stats.json
+arches_for_science/export_deliverables/
+arches_for_science/archestemp/
+arches_for_science/staticfiles
+arches_for_science/webpack/webpack-stats.json
 node_modules
 
 # Packaging
