JS packaging changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "afs",
+    "name": "arches_for_science",
     "repository": {
         "url": "git@github.com:archesproject/arches-for-science-prj.git",
         "type": "git"
