--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "afs"
+name = "arches_for_science"
 readme = "README.rst"
 requires-python = ">=3.9"
 dependencies = [
@@ -16,7 +16,7 @@ dependencies = [
 version = "1.1.0a0"
 
 [tool.setuptools]
-packages = ["afs"]
+packages = ["arches_for_science"]
 
 [tool.black]
 line-length = 140
